[package]
name = "ebpf-windows-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# For eBPF support
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
bytes = "1.4.0"

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }

# Logging
log = "0.4.17"
env_logger = "0.10.0"

# Windows specific
windows = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_NetworkManagement_IpHelper"] }

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya", branch = "main" }

# This creates a separate crate for the eBPF code
[workspace]
members = ["ebpf-program"]